# monggregate

./: .env.txt  .gitignore  404.html  LICENSE  changelog.md  index.html  legacy_pyproject.toml  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  readme.md  requirements.txt  sitemap.xml  test_feature.py  test_pipeline_export.py  test_pipeline_fields.coffee  test_pipeline_fields.py  test_pipeline_reviews.py  test_pipeline_stages.py
.github/workflows/: python-app-ci.yml  python-app.yml
api/: index.html
app/: __init__.py  pipeline.py  stage.py
app/stages/: __init__.py  bucket.py  bucket_auto.py  count.py  group.py  limit.py  lookup.py  match.py  out.py  project.py  replace_root.py  sample.py  set.py  skip.py  sort.py  sort_by_count.py  stage.py  unwind.py
changelog/: index.html
contributing/: index.html
docs/: api.md  changelog.md  contributing.md  index.md  readme.md
docs/api/stages/: bucket.md  bucket_auto.md  count.md  group.md  limit.md  lookup.md
docs/how-to/: create-or-update-a-collection.md  home.md  select-a-nested-document.md  setup.md
docs/how-to/commons/: combine-collections.md  create-or-update-a-collection.md  home.md  select-a-nested-document.md
docs/intro/: mongodb-aggregation-framework.md  mongodb-umbrella.md  why-use-monggregate.md
docs/reference/: dollar.md
docs/stylesheets/: extra.css
docs/tutorial/: getting-started.md  operators.md  pipeline.md  search.md  stages.md  vector-search.md
how-to/autocompletion/: index.html
how-to/commons/combine-collections/: index.html
how-to/commons/create-or-update-a-collection/: index.html
how-to/commons/home/: index.html
how-to/commons/select-a-nested-document/: index.html
how-to/create-or-update-a-collection/: index.html
how-to/home/: index.html
how-to/select-a-nested-document/: index.html
how-to/setup/: index.html
intro/mongodb-aggregation-framework/: index.html
intro/mongodb-umbrella/: index.html
intro/why-use-monggregate/: index.html
monggregate/: __init__.py  _run.py  base.py  dollar.py  expressions.py  index.py  pipeline.py  utils.py
monggregate/expressions/: __init__.py  aggregation_variables.py  content.py  expressions.py  field_paths.py  fields.py  miscellaneous.py
monggregate/operators/: __init__.py  dollar.py  operator.py
monggregate/operators/accumulators/: __init__.py  accumulator.py  avg.py  count.py  first.py  last.py  max.py  min.py  push.py  sum.py
monggregate/operators/arithmetic/: __init__.py  add.py  divide.py  multiply.py  pow.py  substract.py  subtract.py
monggregate/operators/array/: __init__.py  array.py  array_to_object.py  filter.py  first.py  in_.py  is_array.py  last.py  max.py  max_n.py  min_n.py  size.py  sort_array.py
monggregate/operators/boolean/: and_.py  boolean.py  not_.py  or_.py
monggregate/operators/comparison/: __init__.py  cmp.py  comparator.py  eq.py  gt.py  gte.py  lt.py  lte.py  ne.py
monggregate/operators/conditional/: __init__.py  cond.py  if_null.py  switch.py
monggregate/operators/custom/: __init__.py
monggregate/operators/data_size/: __init__.py
monggregate/operators/date/: __init__.py  (+1 more)
monggregate/search/: __init__.py  commons.py
monggregate/stages/: __init__.py  bucket.py  bucket_auto.py  count.py  group.py  limit.py  lookup.py  match.py  out.py  project.py  replace_root.py  sample.py  search.py  search_meta.py  set.py  skip.py  sort.py  sort_by_count.py  stage.py  union_with.py  unset.py  unwind.py
reference/dollar/: index.html
requirements/: all.txt  build.txt  core.txt  doc.txt  linting.txt  optional.txt  testing.txt  typing.txt
search/: search_index.json
src/monggregate/: __init__.py  _run.py  base.py  dollar.py  expressions.py  fields.py  pipeline.py  utils.py
stylesheets/: extra.css
test/: __init__.py  test_docstrings.py  test_dollar.py  test_expressions.py  test_join_alias.py  test_operators.py  test_operators_accumulators.py  test_operators_array.py  test_operators_boolean.py  test_operators_comparison.py  test_operators_objects.py  test_package.py  test_search_operators.py  test_search_pipeline.py  test_stages.py
tests/: test_coverage.py  test_docstrings.py  test_dollar.py  test_expressions.py  test_group.py  test_join_alias.py  test_operators_accumulators.py  test_operators_array.py  test_operators_boolean.py  test_operators_comparison.py  test_operators_objects.py  test_search_operators.py  test_signatures.py  test_stages.py  test_structure.py  test_utils.py  utils.py
tests/data/: test_pipeline_reviews_results.json  test_pipeline_stages_results.json
tests/tests_docs/: __init__.py  test_docstrings.py  test_readme.py  test_sync_readme_index.py
tests/tests_legacy/: __init__.py  test_dollar.py  test_group.py  test_join_alias.py  test_operators_comparison.py  test_search_operators.py  test_stages.py
tests/tests_monggregate/: __init__.py  test_base.py  test_dollar.py  test_fields.py  test_pipeline.py  test_utils.py
tests/tests_search/: test_compound_examples.py
tutorial/getting-started/: index.html
tutorial/operators/: index.html
tutorial/pipeline/: index.html
tutorial/search/: index.html
tutorial/stages/: index.html
tutorial/vector-search/: index.html
(+288 files in other folders)
